test/org/midica/testfiles/failing/eff-pattern-index-invalid-2.midica
INCLUDE inc/instruments.midica


0: c/d/e:pat


PATTERN pat
	: 0/1/2
	: poly_at.note(c)
	: 0/1/2
END
